--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,263 @@
 h1 {
   text-align:center;
   font-style: oblique;
-  font-size: 100px;
+  font-size: 90px;
   color: turquoise;
-  
 }
 
 body {
   background-image:url("https://images.pexels.com/photos/724712/pexels-photo-724712.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
   background-size: cover;
   background-repeat:no-repeat;
+  background-attachment: fixed;
+}
+
+p {
+  text-align:center;
+  color: white;
+}
+
+/** Contact Links **/
+figure .contact {
+  z-index: 2;
+  position: absolute;
+  display: block;
+  top: 0; left: 0; right: 0; bottom: 0;
+}
+.contact a {
+  background-image: url(https://leadergamer.com.tr/wp-content/themes/lgm/images/level-1-c.png);
+}
+figure .contact a {
+  position: absolute;
+  display: block;
+  width: 50%; height: 50%;
+  background-repeat: no-repeat;
+  transition: all .25s ease-in-out;
+}
+  figure .contact .tw {
+    top: 0; left: 0;
+    background-color: rgba(0, 172, 238, .7);
+    background-position: 30px 32px;
+    transform: translate(-100%, -100%);
+  }
+    figure .contact .tw:hover {
+      background-color: rgba(0, 172, 238, 1);
+    }
+  figure .contact .fb {
+    top: 0; right: 0;
+    background-color:#979A9A  ;
+    background-position: -42px 32px;
+    transform: translate(100%, -100%);
+  }
+    figure .contact .fb:hover {
+      background-color: rgba(59, 89, 152, 1);
+    }
+  figure .contact .gp {
+    bottom: 0; left: 0;
+    background-color: rgba(221, 75, 57, .7);
+    background-position: -42px -40px;
+    transform: translate(-100%, 100%);
+  }
+    figure .contact .gp:hover {
+      background-color: rgba(221, 75, 57, 1);
+    }
+  figure .contact .ma {
+    bottom: 0; right: 0;
+    background-color: rgba(153, 153, 153, .7);
+    background-position: -42px -40px;
+    transform: translate(100%, 100%);
+  }
+    figure .contact .ma:hover {
+      background-color: rgba(153, 153, 153, 1);
+    }
+    figure:hover .contact a {
+      transform: translate(0, 0);
+    }
+    figure {
+      position: relative;
+      display: inline-block;
+      overflow: hidden;
+      width: 200px; height: 300px;
+      margin-right: 30px;
+      margin-top: 30px;
+      float: left;
+    }
+
+    /** square **/
+    figure:before {
+      z-index: 3;
+      position: absolute;
+      display: block;
+      content: '';
+      top: 0; left: 0;
+      width: 0%; height: 0%;
+      background: url(https://leadergamer.com.tr/wp-content/themes/lgm/images/team-mask-1.png) no-repeat;
+      pointer-events: none;
+    }
+    figure img {
+      display: block;
+      width: 100%; height: 100%;
+    }
+
+    #Cynthia{
+      color: #00e5ff;
+      padding-left:6%;
+      position:relative;
+      position:absolute;
+    }
+   #Grace{
+    color: #0000FF;
+    padding-left: 27%;
+    position:relative;
+    position:absolute;
+   }
+
+  #Immy{
+    color:#18ffff;
+    padding-left: 48%;
+    position:relative;
+    position:absolute;
+  }
+
+  #juddah{
+    color:#4a148c;
+    padding-left:68%;
+    position:relative;
+    position:absolute;
+  }
+
+ #lavigne{
+   color:#9e9e9e;
+   bottom:250px;
+   vertical-align:bottom;
+   padding-left:5%;
+   position:relative;
+   position:absolute;
+ }
+
+#twinnie{
+  color:#e91e63;
+  bottom:250px;
+  vertical-align:bottom;
+  padding-left:28%;
+  position:relative;
+  position:absolute;
+}
+
+#lilah{
+  color:#4fc3f7;
+  bottom:250px;
+  vertical-align:bottom;
+  padding-left:48%;
+  position:relative;
+  position:absolute;
+}
+
+#londu{
+  color:#FF69B4;
+  bottom:250px;
+  vertical-align:bottom;
+  padding-left:67%;
+  position:relative;
+  position:absolute;
+}
+
+#riuki{
+  color:#C0C0C0;
+  bottom:-100px;
+  vertical-align:left;
+  padding-left:5%;
+  position:relative;
+  position:absolute;
+}
+
+
+#snyder{
+  color:#18ffff;
+  bottom:-100px;
+  vertical-align:left;
+  padding-left:26%;
+  position:relative;
+  position:absolute;
+}
+
+#safari{
+  color:#0000FF;
+  bottom:-100px;
+  vertical-align:left;
+  padding-left:49%;
+  position:relative;
+  position:absolute;
+}
+
+#nancyann{
+  color:#4fc3f7;
+  bottom:-100px;
+  vertical-align:left;
+  padding-left:68%;
+  position:relative;
+  position:absolute;
+}
+
+#PYT{
+  color:#18ffff;
+  bottom:-450px;
+  vertical-align:left;
+  padding-left:7%;
+  position:relative;
+  position:absolute;
+}
+
+#najib{
+  color:#4fc3f7;
+  bottom:-450px;
+  vertical-align:left;
+  padding-left:27%;
+  position:relative;
+  position:absolute;
+}
+
+#vanera{
+  color:#F5FFFA;
+  bottom:-450px;
+  vertical-align:left;
+  padding-left:47%;
+  position:relative;
+  position:absolute;
+}
+
+#wanza{
+  color:#0000FF;
+  bottom:-450px;
+  vertical-align:left;
+  padding-left:70%;
+  position:relative;
+  position:absolute;
+}
+
+#osoi{
+  color:purple;
+  bottom:-800px;
+  vertical-align:left;
+  padding-left:5%;
+  position:relative;
+  position:absolute;
+}
+
+#woli{
+  color:#0000FF;
+  bottom:-800px;
+  vertical-align:left;
+  padding-left:28%;
+  position:relative;
+  position:absolute;
+}
+
+#siah{
+  color:#9e9e9e;
+  bottom:-800px;
+  vertical-align:left;
+  padding-left:50%;
+  position:relative;
+  position:absolute;
 }
